--- a/pet-salon-frontend/src/komponente/Footer.css
+++ b/pet-salon-frontend/src/komponente/Footer.css
@@ -1,9 +1,7 @@
 .footer {
     background-color: #262225;
     color: #ECEBE9;
-    padding: 20px;
     text-align: center;
-    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -16,6 +14,7 @@
 }
 
 .salon-info {
+    padding-left: 50px;
     text-align: left;
 
 }
