--- a/pet-salon-frontend/src/komponente/UslugeTabela.css
+++ b/pet-salon-frontend/src/komponente/UslugeTabela.css
@@ -44,3 +44,19 @@
     color: #c9302c;
   }
   
+  .toggle-form-button {
+    background-color: #4C8891;
+    color: #ECEBE9;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-bottom: 20px;
+  }
+  
+  .toggle-form-button:hover {
+    background-color: #29354B;
+  }
+  
